<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/avatar"
            android:src="@drawable/baseline_person"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resuslt"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"
            android:id="@+id/result"/>



    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/country_name"
            android:textColor="#fff"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textColor="#fff"
            android:textSize="50sp"
            android:id="@+id/tv_temp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="monospace"
                android:textColor="#fff"
                android:id="@+id/wdescription"
                android:textSize="15sp" />


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/weathericon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/weathericon" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#E43542AE"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">



            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:fontFamily="monospace"
                android:text="@string/feels_like"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:id="@+id/feels_like"
                android:textColor="#fff"
                android:textSize="20sp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">



            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:fontFamily="monospace"
                android:text="@string/temp_max"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:id="@+id/tamp_max"
                android:textColor="#fff"
                android:textSize="20sp" />



        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">



                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:fontFamily="monospace"
                    android:text="@string/temp_min"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:id="@+id/temp_min"
                    android:textColor="#fff"
                    android:textSize="20sp" />



            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">



            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:fontFamily="monospace"
                android:text="@string/humidity"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:id="@+id/humidity"
                android:textColor="#fff"
                android:textSize="20sp" />



        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>